--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!--Nav Top-->
       <nav class="nav-top">
         <div class="content" id="">
-          <ul class="">
+          <ul class="nav-top-info">
             <li class="nav-item">
               <a class="nav-link" href="tel:+123456789"
                 ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill icon-nav-top" viewBox="0 0 16 16">
